# Building_Acoustic_Torpedo

./: GETTING_STARTED.md  README.md
torpedo/: CMakeLists.txt  README.md  package.xml
torpedo/launch/: demo.launch  spawn.launch
torpedo/models/torpedo/: model.config  model.sdf
torpedo/src/: TorpedoPlugin.cc  controller.cpp
torpedo/worlds/: demo.world
warzone/: CMakeLists.txt  README.md  package.xml
warzone/launch/: arena.launch
warzone/models/sea_mine/: model.config  model.sdf
warzone/models/sea_mine/meshes/: base_link.STL  ignition_link.STL
warzone/models/submarine/: model.config  model.sdf
warzone/models/warzone_ocean/: model.config  model.sdf
warzone/models/warzone_ocean/materials/scripts/: warzone_ocean.material
warzone/models/warzone_ocean/materials/textures/: License.txt
warzone/src/: warzone.cc
warzone/worlds/: arena.world
